gcc-14.2.0/gcc/testsuite/gdc.test/compilable/disable_new.d
version https://git-lfs.github.com/spec/v1
oid sha256:731f2a33653509d0a2eb78c2ec5379f3afc98e28587d7317b7e7a2ea2697bc42
size 200
